--- a/greenhouse-api/.gitignore
+++ b/greenhouse-api/.gitignore
@@ -1,3 +1,6 @@
+## PROJECT SPECIFIC EXCLUSIONS ######################
+.idea
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Linux template
 *~
