Fixed .gitignore: the bin folder was missing

--- a/greenhouse-api/.gitignore
+++ b/greenhouse-api/.gitignore
@@ -1,5 +1,6 @@
 ## PROJECT SPECIFIC EXCLUSIONS ######################
 .idea
+!/bin
 
 # Created by .ignore support plugin (hsz.mobi)
 ### Linux template
