Added release prod apk

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ## PROJECT SPECIFIC EXCLUSIONS ######################
 .idea
+!/apk/*.apk
 
 # Created by .ignore support plugin (hsz.mobi)
 ### Linux template
